# ChessBestMoveModel

./: Best_move.py  Image_resize.py  README.md  Split_dataset.py  Split_label_data.py  analyze_Board.py  app.py  augmentation.py  combine_datasets.py  delete.py  evaluate_model.py  model.py  model_def.py  pyproject.toml  show_board.py  split_eval_data.py
